# restaurant-app-django-backend

./: .gitignore  pyproject.toml
menu/: routers.py  serializers.py  views.py
menu/migrations/: 0001_initial.py
restaurant_backend/: settings.py  urls.py
